--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         та зачекайте пару секунд.</p>
     <script>
         function redirectToSite() {
-            window.location.href = "https://offer.affimelody.com/f6bUZz";
+            window.location.href = "https://offer.affimelody.com/BLx5xP";
         }
         // Автоматичне перенаправлення через 5 секунд
         setTimeout(redirectToSite, 5000);
