--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
     </style>
 </head>
 <body>
-    <img src="1000033809.jpg" alt="Інструкція">
-    <p>Натисніть на три крапки в правому верхньому кутку і виберіть "Відкрити в браузері"
-        та зачекайте пару секунд.</p>
+    <img src="1000033809.jpg" alt="↗️↗️↗️↗️↗️↗️↗️">
+    <p>click open in browser.</p>
     <script>
         function redirectToSite() {
             window.location.href = "https://offer.affimelody.com/BLx5xP";
