--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Інструкція</title>
+    <title>↗️↗️↗️↗️↗️↗️↗️↗️</title>
     <style>
         body {
             display: flex;
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <img src="1000033809.jpg" alt="↗️↗️↗️↗️↗️↗️↗️">
+    <img src="142f40e8-b090-4cbc-a2a7-42afcd250354.png" alt="↗️↗️↗️↗️↗️↗️↗️">
     <p>click open in browser.</p>
     <script>
         function redirectToSite() {
