--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </style>
 </head>
 <body>
-    <img src="142f40e8-b090-4cbc-a2a7-42afcd250354.png" alt="↗️↗️↗️↗️↗️↗️↗️">
-    <p>click open in browser.</p>
+    <img src="IMG_20250307_165606.jpg" alt="↗️↗️↗️↗️↗️↗️↗️">
+    <p>Натисніть на три точки в правому верхньому куті та виберіть ВІДКРИТ В БРАУЗЕРІ.</p>
     <script>
         function redirectToSite() {
-            window.location.href = "https://offer.affimelody.com/BLx5xP";
+            window.location.href = "https://offer.affimelody.com/f6bUZz";
         }
         // Автоматичне перенаправлення через 5 секунд
         setTimeout(redirectToSite, 5000);
