--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>Натисніть на три точки в правому верхньому куті та виберіть ВІДКРИТ В БРАУЗЕРІ.</p>
     <script>
         function redirectToSite() {
-            window.location.href = "https://offer.affimelody.com/BLx5xP";
+            window.location.href = "https://offer.affimelody.com/f6bUZz";
         }
         // Автоматичне перенаправлення через 5 секунд
         setTimeout(redirectToSite, 5000);
