--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         function redirectToSite() {
             window.location.href = "https://offer.affimelody.com/f6bUZz";
         }
-       
+       // Автоматичне перенаправлення через 5 секунд
+        setTimeout(redirectToSite, 5000);
     </script>
 </body>
 </html>
