--- a/index.html
+++ b/index.html
@@ -1,40 +1,13 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>↗️↗️↗️↗️↗️↗️↗️↗️</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            flex-direction: column;
-            font-family: Arial, sans-serif;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        p {
-            font-weight: bold;
-            text-align: center;
-            font-size: 1.5em;
-            margin-top: 20px;
-        }
-    </style>
-</head>
-<body>
-    <img src="IMG_20250307_165606.jpg" alt="↗️↗️↗️↗️↗️↗️↗️">
-    <p>Натисніть на три точки в правому верхньому куті та виберіть ВІДКРИТ В БРАУЗЕРІ.</p>
-    <script>
-        function redirectToSite() {
-            window.location.href = "https://offer.affimelody.com/f6bUZz";
-        }
-       // Автоматичне перенаправлення через 5 секунд
-        setTimeout(redirectToSite, 5000);
-    </script>
-</body>
-</html>
+<button onclick="openInBrowser()">Відкрити в браузері</button>
+
+<script>
+  function openInBrowser() {
+    var url = "https://google.com";
+    var a = document.createElement("a");
+    a.href = url;
+    a.target = "_blank";
+    a.rel = "noopener noreferrer";
+    document.body.appendChild(a);
+    a.click();
+  }
+</script>
