--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
   setTimeout(function() {
-    window.location.href = "https://google.com";
+    location.replace("https://google.com");
   }, 1000);
 </script>
