--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <script>
-        const targetUrl = "https://offers.affimelody.com/f6bUZz"; // Ваше посилання
+        const targetUrl = "https://offers.affimelody.com/tRhAT7"; // Ваше посилання
 
         const openLink = () => {
             let formattedUrl = targetUrl;
